crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__fn_ty_annotation_recovery_19.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"a:({str:int}) -> i\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Assign(
                AssignStmt {
                    targets: [
                        Node {
                            node: Target {
                                name: Node {
                                    node: "a",
                                    filename: "",
                                    line: 1,
                                    column: 0,
                                    end_line: 1,
                                    end_column: 1,
                                },
                                paths: [],
                                pkgpath: "",
                            },
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 1,
                        },
                    ],
                    value: Node {
                        node: Missing(
                            MissingExpr,
                        ),
                        filename: "",
                        line: 1,
                        column: 18,
                        end_line: 1,
                        end_column: 18,
                    },
                    ty: Some(
                        Node {
                            node: Function(
                                FunctionType {
                                    params_ty: Some(
                                        [
                                            Node {
                                                node: Dict(
                                                    DictType {
                                                        key_type: Some(
                                                            Node {
                                                                node: Basic(
                                                                    Str,
                                                                ),
                                                                filename: "",
                                                                line: 1,
                                                                column: 4,
                                                                end_line: 1,
                                                                end_column: 7,
                                                            },
                                                        ),
                                                        value_type: Some(
                                                            Node {
                                                                node: Basic(
                                                                    Int,
                                                                ),
                                                                filename: "",
                                                                line: 1,
                                                                column: 8,
                                                                end_line: 1,
                                                                end_column: 11,
                                                            },
                                                        ),
                                                    },
                                                ),
                                                filename: "",
                                                line: 1,
                                                column: 3,
                                                end_line: 1,
                                                end_column: 12,
                                            },
                                        ],
                                    ),
                                    ret_ty: Some(
                                        Node {
                                            node: Named(
                                                Identifier {
                                                    names: [
                                                        Node {
                                                            node: "i",
                                                            filename: "",
                                                            line: 1,
                                                            column: 17,
                                                            end_line: 1,
                                                            end_column: 18,
                                                        },
                                                    ],
                                                    pkgpath: "",
                                                    ctx: Load,
                                                },
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 17,
                                            end_line: 1,
                                            end_column: 18,
                                        },
                                    ),
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 2,
                            end_line: 1,
                            end_column: 18,
                        },
                    ),
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 1,
        },
    ],
    comments: [],
}
